Bug 1655674: Prevent nsPrintJob::FinishPrintPreview running twice by checking mIsCreatingPrintPreview. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D86320